deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway
  namespace: gitee
  labels:
    app: gateway
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gateway
      version: v1
  template:
    metadata:
      labels:
        app: gateway
        version: v1
    spec:
      containers:
      - name: gateway
        image: $JOB_BASE_NAME:$BUILD_ID
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: gateway
  namespace: gitee
  labels:
    app: gateway
    service: gateway
spec:
  ports:
  - port: 80
    name: http
  selector:
    app: gateway

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gateway
  namespace: gitee
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules: 
  - host: k8s.gateway.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: gateway
            port:
              number: 80
