ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gateway
  namespace: default
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules: 
  - host: k8s.gateway.com
    http:
      paths:
      - path: /
        backend:
          serviceName: gateway
          servicePort: 80
